hphp/hack/test/typecheck/reactive/rx_if_implements11.php.exp
File "rx_if_implements11.php", line 8, characters 28-35:
Method 'mayberx2' has multiple <<__RxIfImplements>>, <<__RxShallowIfImplements>> or <<__RxLocalIfImplements>> annotations. (NastCheck[3058])
